[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workbench-cli"
version = "0.0.1"
authors = [
  { name="Zipho Mashologu", email="zipho@sanbi.ac.za" },
]
description = "A workbench cli"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]   

[project.urls]
"Homepage" = "https://github.com/combat-sars-cov-2/workbench-cli"
"Bug Tracker" = "https://github.com/combat-sars-cov-2/workbench-cli/issues"