[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "workbench-cli"
version = "0.0.1"
authors = [
  { name="Zipho Mashologu", email="zipho@sanbi.ac.za" },
]
description = "okapi workbench, a command-line shell and scripting interface for Galaxy, Irida etc."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.pylint.format]
max-line-length = "120"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"  # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[project.urls]
"Homepage" = "https://github.com/combat-sars-cov-2/workbench-cli"
"Bug Tracker" = "https://github.com/combat-sars-cov-2/workbench-cli/issues"
