[metadata]
name = twiga
version = 0.0.1

[options]
install_requires =
    requests
    click
    importlib; python_version == "3.8"
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sanbi-twiga = src.sanbi-sars-cov-workbench.cli:main
    galaxy-twiga = src.galaxy-workbench.cli:main
    irida-twiga = src.irida-workbench.cli:main
    cwl-twiga = src.cwl-workbench.cli:main