[metadata]
name = okapi
version = 0.0.1

[options]
install_requires =
    requests
    click
    importlib; python_version == "3.8"
packages=find:

[options.entry_points]
console_scripts =
    workbench-okapi = src.sanbi_sars_cov_workbench.cli:main

[options.extras_require]
dev =
    aniso8601==9.0.1
    asgiref==3.5.0
    bcrypt==3.2.2
    bioblend==0.17.0
    black==22.3.0
    certifi==2022.6.15
    cffi==1.15.0
    charset-normalizer==2.0.12
    click==8.1.3
    config==0.5.1
    filelock==3.4.2
    galaxy-containers==21.9.0
    galaxy-lib==19.5.2
    galaxy-tool-util==21.9.2
    galaxy-util==21.9.0
    ghapi==1.0.0
    idna==3.3
    loguru==0.6.0
    lxml==4.9.0
    MarkupSafe==2.1.1
    mkdir==2020.12.3
    mypy-extensions==0.4.3
    nose==1.3.7
    orderdict==2020.12.3
    packaging==21.3
    paramiko==2.11.0
    pathspec==0.9.0
    platformdirs==2.5.2
    promise==2.3
    protobuf==3.19.4
    pycparser==2.21
    pycryptodome==3.15.0
    pydantic==1.9.1
    PyGithub==1.55
    PyJWT==2.4.0
    PyNaCl==1.5.0
    pyparsing==3.0.9
    python-dateutil==2.8.2
    python-decouple==3.6
    python-http-client==3.3.7
    PyYAML==6.0
    repoze.lru==0.7
    requests==2.28.0
    requests-toolbelt==0.9.1
    Routes==2.5.1
    setupcfg==2020.12.3
    setuppy-generator==2020.12.2
    six==1.16.0
    sortedcontainers==2.4.0
    sqlparse==0.4.2
    starkbank-ecdsa==2.0.3
    text-unidecode==1.3
    tinytag==1.8.1
    tomli==2.0.1
    toposort==1.7
    tqdm==4.64.0
    typing_extensions==4.2.0
    urllib3==1.26.9
test =
    coverage
    mock
    nose
    pycodestyle
    pyflakes
    requests_mock
    setuptools>=36.4.0